--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,14 +24,14 @@ jobs:
       run: mvn -B package --file pom.xml
   test:
     name: Unit Test
-    runs-on: Windows
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 11
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          java-version: 1.11
+          java-version: 1.8
       - name: Maven Package
         run: mvn -B clean package -DskipTests
       - name: Maven Verify
